<resources>
    <string name="app_name" translatable="false">IGLOB Rider</string>
    <string name="app_name_cap" translatable="false">IGLOB Rider</string>
    <string name="googlekey" translatable="false">AIzaSyAvu8EE4FtJOzQHlfPeGhybbYRG3P7I9Es</string>
    <string name="googlekey_other" translatable="false">AIzaSyDoTgCPXDGQKNYIWQ-LwawNDmw57YrThfw</string>
    <string name="FACEBOOK_APP_ID" translatable="false">2409105759321455</string>
    <string name="facebook_app_id" translatable="false">2409105759321455</string>
    <string name="ACCOUNT_KIT_CLIENT_TOKEN" translatable="false">fa87baf0e4acca3f159e5b9dd3f11f01</string>
    <string name="areusure">Are you sure?</string>
    <string name="tocancel">Cancel this request</string>
    <string name="allowpermission">Allow Permission</string>
    <string name="nessper">This permission is necessary to use IGLOB Rider</string>
    <string name="allow">Allow</string>
    <string name="closeapp">Close App</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="login">LOG IN</string>
    <string name="signup">SIGN UP</string>
    <string name="login_sm">Login</string>
    <string name="phone">Phone</string>
    <string name="password">Password</string>
    <string name="forgotpass">Forgot password?</string>
    <string name="logface">LOGIN WITH FACEBOOK</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="pickuplocation">Pick up Location</string>
    <string name="droplocation">Dropoff location</string>
    <string name="sign_sm">Signup</string>
    <string name="bookletter">BOOK LATER</string>
    <string name="booknow">BOOK NOW</string>
    <string name="myprofile">Profile</string>
    <string name="mywallet">My Wallet</string>
    <string name="ridehistory">History</string>
    <string name="logout">Logout</string>
    <string name="home">Home</string>
    <string name="location">Location</string>
    <string name="setdrop">Set Dropoff location</string>
    <string name="forgotpassword">Forgot Password</string>
    <string name="pleaseenteremailid">Enter your email id</string>
    <string name="email">Email id</string>
    <string name="submit">Submit</string>
    <string name="distance">Distance</string>
    <string name="estimatefare">Estimate</string>
    <string name="timearriving">Arrive</string>
    <string name="sendreq">CONFIRM TO REQUEST RIDE</string>
    <string name="cancel">Cancel</string>
    <string name="pleasewait">Please wait...</string>
    <string name="request">Request</string>
    <string name="waitsearchdriver">Please wait, we are searching for drivers...</string>
    <string name="seldatetime">Select Date and Time</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="areyousure">Please confirm, to cancel this ride?</string>
    <string name="thisreqnotacc">Unfortunately, the booking request was not succesfull!!</string>
    <string name="plstryagain">Please try again later!</string>
    <string name="applycoopn">Apply Coupon</string>
    <string name="entercoponcode">Enter coupon code</string>
    <string name="apply">Apply</string>
    <string name="yourcodeappsucc">Your coupon code has been applied</string>
    <string name="invalid">Invalid</string>
    <string name="codeisinvalid">The entered code is invalid. Please enter right coupon code.</string>
    <string name="accept_sm">Accept</string>
    <string name="cantbookreq">Please book at least 30 minutes ahead of time</string>
    <string name="rideschedule">Your booking is scheduled</string>
    <string name="ontheway">On the way</string>
    <string name="driverontheway">Your driver is on the way</string>
    <string name="driverdetail">Driver Detail</string>
    <string name="personal">Personal</string>
    <string name="cancelbooking">Cancel booking</string>
    <string name="yourbill">Your invoice</string>
    <string name="howwasride">How was your ride?</string>
    <string name="entercomment">Enter your comment</string>
    <string name="money">Money</string>
    <string name="cashless"><![CDATA[Cashless, Hassle-free rides & more]]></string>
    <string name="currentbal">Your current balance</string>
    <string name="addhitechmoney">Add IGLOB Rider Dollars</string>
    <string name="entermoney">Enter an amount between $10 - $100</string>
    <string name="billpaywith">Bill pay with</string>
    <string name="driver">Driver</string>
    <string name="help">Help</string>
    <string name="history">History</string>
    <string name="bookingsuccess">Success</string>
    <string name="yourbookcon">Booking request accepted.\nDriver will pick you up soon.</string>
    <string name="done">Done</string>
    <string name="close">Close</string>
    <string name="reply">Reply</string>
    <string name="langhespeak">Language: English</string>
    <string name="entermobile">Enter mobile number</string>
    <string name="enterpass">Enter Password</string>
    <string name="invalidcredential">Invalid Credentials</string>
    <string name="plsenfrst">Please enter your first name</string>
    <string name="plsenlst">Please enter your last name</string>
    <string name="plsenterphone">Please enter your phone number</string>
    <string name="plsemail">Please enter your email id</string>
    <string name="plsenpass">Enter Password</string>
    <string name="adddriver">Add favorite Driver</string>
    <string name="requestcancel">cancel</string>
    <string name="yourrequestiscanceled">Your booking request has been canceled by the driver</string>
    <string name="ok">Ok</string>
    <string name="solicite">Searching</string>
    <string name="driverasfav">This driver has been added to your favorite driver list.</string>
    <string name="unfav">Driver has been removed from your favorite driver list</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="tripfinish">Trip has been completed</string>
    <string name="yourridefinish">Completed ride</string>
    <string name="driverarrived">Driver arrived</string>
    <string name="yourdriverarr">Your driver has arrived</string>
    <string name="tripstart">Trip started</string>
    <string name="tripstarted">Trip started</string>
    <string name="ridecomp">Ride completed</string>
    <string name="favdriver">Favorite Driver</string>
    <string name="language">Language</string>
    <string name="wevarify">We will verify your mobile number</string>
    <string name="wantcont">Do you want to continue?</string>
    <string name="profile">Profile</string>
    <string name="save">Save</string>
    <string name="mobilenumber">Mobile Number</string>
    <string name="driverreceive">Driver receives cash</string>
    <string name="waitdriverconfirmation">Please wait for driver confirmation</string>
    <string name="notenough">You do not enough balance in your wallet</string>
    <string name="something">Wallet balance too low</string>
    <string name="setpickup">Update dropoff location</string>
    <string name="youonlyuse">For the security of our drivers, you can only use the cash option, after your identity is confirmed. Please upload a goverment photo Id or credit/debit card.</string>
    <string name="tips">Tip</string>
    <string name="areyouwilltip">Would you like to tip the driver</string>
    <string name="entertipsamount">Enter Tip Amount</string>
    <string name="ridedetail">Ride Detail</string>
    <string name="bookingno">Booking</string>
    <string name="sendrequest">Send request</string>
    <string name="selectpick">Please select pickup location</string>
    <string name="selectdrop">Please select drop off location</string>
    <string name="identynoti">Your identity has not been identified yet, you can not use the cash option</string>
    <string name="bookingnoid">Booking Id</string>
    <string name="drivernotavb"> This driver is currently not available</string>
    <string name="entercode">Enter code.</string>
    <string name="enteramount">Please enter amount.</string>
    <string name="payment">Payment</string>
    <string name="discount">Discount</string>
    <string name="expire">Code expired.</string>
    <string name="allreadyused">This code has already been used by you.</string>
    <string name="alreadylog">You are logged in from a different device. Would you like to log out of the other device?</string>
    <string name="appupdateneed">New version available. Please update before continuing</string>
    <string name="remindlater">Remind me Later</string>
    <string name="nodrivers">No Drivers available.</string>
    <string name="searchdriver">Search by name</string>
    <string name="savecard">Save Card</string>
    <string name="cards">Add Card</string>
    <string name="removecard">Remove Card</string>
    <string name="yourcarddetailsaved">Your card details have been saved successfully</string>
    <string name="cardupdated">Card details updated.</string>
    <string name="cardremoved">Card removed.</string>
    <string name="update">Update</string>
    <string name="pleaseaddcarddetail">Add valid card details for card payment.</string>
    <string name="wrongpoint">Wrong selection</string>
    <string name="wrongdrop">Please select a destination </string>
    <string name="wrongpick">Please select a pickup location</string>
    <string name="areucon">Please confirm this drop off location?</string>
    <string name="addpointoint">Add location</string>
    <string name="droppoint">Drop off location</string>
    <string name="seldroppoint">Please select a dropoff location</string>
    <string name="click_getin">please add drop off location , by long click on route.</string>
    <string name="click_getout">please define where you want to be dropped off, by long click on route.</string>
    <string name="dragdrop">Now drag and drop your pickup and dropoff location for right selection.</string>
    <string name="confirm">Confirm</string>
    <string name="minaway">min away</string>
    <string name="badconn">Bad Server Connection</string>
    <string name="enjoyride">Enjoy your ride.</string>
    <string name="onride">Enroute</string>
    <string name="drivarr">Driver Arrived</string>
    <string name="ddriverhasarr">Your Driver arrived</string>
    <string name="discountapplied">Discount applied:</string>
    <string name="plsgiverating">Please rate</string>
    <string name="plschkemaillink">Reset password mail has been sent to your email id</string>
    <string name="emailnotexist">This Email id does not exist</string>
    <string name="enterfirstname">Please enter first name</string>
    <string name="enterlastname">Please enter last name</string>
    <string name="emteremail">Please enter email id</string>
    <string name="identi">your identity is identified.</string>
    <string name="identynotide">your identity is not identified.</string>
    <string name="servererror">Server Error, please try again..</string>
    <string name="completed">Complete</string>
    <string name="canceled">Canceled</string>
    <string name="drivernotfound">Driver Not Found</string>
    <string name="nodriverfound">No driver is available with this car type, try with other car type.</string>
    <string name="nodriveravb">No driver is available.</string>
    <string name="selcartype">Please select car type</string>
    <string name="nodrivers_s">No Drivers</string>
    <string name="sellocation">Please select location</string>
    <string name="pressagain">Press Back again to exit</string>
    <string name="cardnameempty">Card Name can\'t be empty</string>
    <string name="resndotp">Resend otp</string>
    <string name="plsenterotp">Enter otp number</string>
    <string name="enterotp">Enter Otp</string>
    <string name="successmsg">Report has been submitted successfully.</string>
    <string name="success">Success</string>
</resources>