<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@android:color/transparent"
    android:gravity="center"
    android:layoutDirection="ltr"

    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="40dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/headtv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/success"
                android:textColor="@color/red"
                android:textSize="@dimen/large" />

            <TextView
                android:id="@+id/msgtv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:text="@string/successmsg"
                android:textColor="@color/black"
                android:textSize="@dimen/medium" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:visibility="visible"
                android:weightSum="1">

                <TextView
                    android:id="@+id/oktv"
                    android:layout_width="0dp"
                    android:layout_height="35dp"
                    android:layout_weight="1"

                    android:background="@color/red"
                    android:gravity="center"
                    android:paddingBottom="5dp"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:paddingTop="5dp"
                    android:text="@string/ok"
                    android:textColor="@color/white"
                    android:textSize="@dimen/small" />

                <TextView
                    android:id="@+id/no_tv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_weight="1"
                    android:background="@color/darkgrey"
                    android:gravity="center"
                    android:paddingBottom="5dp"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:paddingTop="5dp"
                    android:text="@string/no"
                    android:textColor="@color/white"
                    android:textSize="@dimen/small"
                    android:visibility="gone" />

            </LinearLayout>

        </LinearLayout>


    </RelativeLayout>
</LinearLayout>