<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center">
    <android.support.v7.widget.CardView
        android:layout_margin="30dp"

        android:layout_width="match_parent"
        app:cardUseCompatPadding="true"
        app:cardCornerRadius="10dp"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <LinearLayout
                android:padding="10dp"

                android:gravity="center"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/txtmsg"
                    android:layout_marginLeft="10dp"
                    android:textSize="@dimen/extralarge"
                    android:textColor="@color/black"
                    android:text="@string/requestcancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <View
                android:background="@color/darkgrey"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"></View>
            <TextView
                android:id="@+id/bodymsg"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:textSize="@dimen/small"
                android:textColor="@color/black"
                android:text="@string/yourrequestiscanceled"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/done_tv"
                android:layout_margin="5dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="@dimen/large"
                android:gravity="center"
                android:text="@string/ok"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>


    </android.support.v7.widget.CardView>
</android.support.constraint.ConstraintLayout>