<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@android:color/transparent"
    android:gravity="center"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:background="@color/white"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            >
            <TextView
                android:id="@+id/heading_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginTop="35dp"
                android:layout_marginBottom="5dp"
                android:text="@string/areusure"
                android:textColor="@color/darktextcol"
                android:textSize="@dimen/medium" />

            <TextView
                android:visibility="visible"
                android:id="@+id/message_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:layout_marginBottom="15dp"
                android:text="@string/tocancel"
                android:textColor="@color/black"
                android:textSize="@dimen/medium" />



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:id="@+id/yes_tv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"

                    android:background="@color/darktextcol"
                    android:gravity="center"
                    android:paddingBottom="5dp"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:paddingTop="5dp"
                    android:text="@string/yes"
                    android:textColor="@color/white"
                    android:textSize="@dimen/small" />

                <TextView
                    android:visibility="visible"
                    android:id="@+id/no_tv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_weight="1"
                    android:background="@color/darkgrey"
                    android:gravity="center"
                    android:paddingBottom="5dp"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:paddingTop="5dp"
                    android:text="@string/no"
                    android:textColor="@color/white"
                    android:textSize="@dimen/small" />

            </LinearLayout>

        </LinearLayout>

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/noti_color" />

    </RelativeLayout>
</LinearLayout>