<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/ac_contact"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="ltr"
    android:focusableInTouchMode="true"

    tools:context=".activity.ForgotPassword">
    <RelativeLayout
        android:id="@+id/mainlay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="@color/toobarcolor"

            android:minHeight="?attr/actionBarSize"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:theme="@style/CustomTheme" />



            <RelativeLayout
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:id="@+id/exit_app_but"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:visibility="visible">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:src="@drawable/ic_back" />
            </RelativeLayout>

            <TextView
                android:id="@+id/titletext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="55dp"
                android:text="@string/forgotpassword"
                android:textColor="@color/white"
                android:textSize="@dimen/medium" />



    </RelativeLayout>
    <ScrollView
        android:layout_below="@+id/mainlay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:gravity="center"
            android:layout_margin="10dp"

            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/pleaseenteremailid"
                android:textSize="@dimen/large"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <android.support.design.widget.TextInputLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/forgot_email"
                    android:inputType="textEmailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:singleLine="true"
                    android:textSize="@dimen/medium" />
            </android.support.design.widget.TextInputLayout>
            <TextView
                android:id="@+id/submit"
                android:layout_marginTop="20dp"
                android:text="@string/submit"
                android:textSize="@dimen/large"
                android:textStyle="bold"
                android:gravity="center"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:background="@drawable/button_round_dra"
                android:textColor="@color/white"
                android:layout_width="150dp"
                android:layout_height="wrap_content" />




        </LinearLayout>

    </ScrollView>
<ProgressBar
    android:visibility="gone"
    android:id="@+id/prgressbar"
    android:layout_centerInParent="true"
    android:layout_width="40dp"
    android:layout_height="40dp" />

</RelativeLayout>
